# libsql_erl

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rebar.config
crates/libsql_nif/: Cargo.toml
crates/libsql_nif/src/: builder.rs  database.rs  lib.rs
native/: Cargo.toml  Makefile
native/.cargo/: config
native/src/: builder.rs  database.rs  lib.rs  task.rs
priv/crates/libsql_nif/: libsql_nif-ce740eb5f123d5f1.rmeta  libsql_nif.rlib
src/: cargo.hrl  libsql.app.src  libsql.erl  libsql_erl.app.src  libsql_erl.erl  libsql_nif.erl
