[package]
name = "libsql_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsql_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsql = "0.3.1"
once_cell = "1.19.0"
rustler = "0.31.0"
tokio = { version = "1.36.0", features = ["full"] }
